s2bc/y.output
   0  $accept : module $end

   1  module : typelist

   2  typelist : definition
   3           | definition typelist

   4  definition :
   5             | primitive
   6             | struct_type
   7             | constant_type
   8             | enum
   9             | select
  10             | typedef

  11  struct_start : STRUCT_
  12               | PUBLIC_ STRUCT_

  13  struct_type : struct_start '{' struct_decls '}' NAME_ ';'

  14  struct_decls :
  15               | struct_decls declaration

  16  declaration : NAME_ NAME_ ';'
  17              | NAME_ NAME_ '<' NUM_ '>' ';'

  18  primitive : PRIMITIVE_ NAME_ NUM_ ';'

  19  enum : ENUM_ '{' enumerateds '}' NAME_ ';'

  20  enumerateds : enumerated
  21              | enumerated ',' enumerateds

  22  enumerated : NAME_ '(' NUM_ ')'

  23  select : select_start '{' select_arms '}' NAME_ ';'

  24  select_start : SELECT_

  25  select_arms :
  26              | select_arms select_arm

  27  select_arm : CASE_ NAME_ ':' declaration

  28  typedef : TYPEDEF_ declaration

0: shift/reduce conflict (shift 1, reduce 4) on PUBLIC_
0: shift/reduce conflict (shift 2, reduce 4) on STRUCT_
0: shift/reduce conflict (shift 3, reduce 4) on SELECT_
0: shift/reduce conflict (shift 4, reduce 4) on ENUM_
0: shift/reduce conflict (shift 5, reduce 4) on PRIMITIVE_
0: shift/reduce conflict (shift 6, reduce 4) on TYPEDEF_
0: shift/reduce conflict (shift 7, reduce 4) on constant_type
state 0
	$accept : . module $end  (0)
	definition : .  (4)

	PUBLIC_  shift 1
	STRUCT_  shift 2
	SELECT_  shift 3
	ENUM_  shift 4
	PRIMITIVE_  shift 5
	TYPEDEF_  shift 6
	constant_type  shift 7
	$end  reduce 4

	module  goto 8
	typelist  goto 9
	definition  goto 10
	select  goto 11
	primitive  goto 12
	struct_type  goto 13
	enum  goto 14
	typedef  goto 15
	struct_start  goto 16
	select_start  goto 17


state 1
	struct_start : PUBLIC_ . STRUCT_  (12)

	STRUCT_  shift 18
	.  error


state 2
	struct_start : STRUCT_ .  (11)

	.  reduce 11


state 3
	select_start : SELECT_ .  (24)

	.  reduce 24


state 4
	enum : ENUM_ . '{' enumerateds '}' NAME_ ';'  (19)

	'{'  shift 19
	.  error


state 5
	primitive : PRIMITIVE_ . NAME_ NUM_ ';'  (18)

	NAME_  shift 20
	.  error


state 6
	typedef : TYPEDEF_ . declaration  (28)

	NAME_  shift 21
	.  error

	declaration  goto 22


state 7
	definition : constant_type .  (7)

	.  reduce 7


state 8
	$accept : module . $end  (0)

	$end  accept


state 9
	module : typelist .  (1)

	.  reduce 1


10: reduce/reduce conflict (reduce 2, reduce 4) on $end
10: shift/reduce conflict (shift 1, reduce 4) on PUBLIC_
10: shift/reduce conflict (shift 2, reduce 4) on STRUCT_
10: shift/reduce conflict (shift 3, reduce 4) on SELECT_
10: shift/reduce conflict (shift 4, reduce 4) on ENUM_
10: shift/reduce conflict (shift 5, reduce 4) on PRIMITIVE_
10: shift/reduce conflict (shift 6, reduce 4) on TYPEDEF_
10: shift/reduce conflict (shift 7, reduce 4) on constant_type
state 10
	typelist : definition .  (2)
	typelist : definition . typelist  (3)
	definition : .  (4)

	PUBLIC_  shift 1
	STRUCT_  shift 2
	SELECT_  shift 3
	ENUM_  shift 4
	PRIMITIVE_  shift 5
	TYPEDEF_  shift 6
	constant_type  shift 7
	$end  reduce 2

	typelist  goto 23
	definition  goto 10
	select  goto 11
	primitive  goto 12
	struct_type  goto 13
	enum  goto 14
	typedef  goto 15
	struct_start  goto 16
	select_start  goto 17


state 11
	definition : select .  (9)

	.  reduce 9


state 12
	definition : primitive .  (5)

	.  reduce 5


state 13
	definition : struct_type .  (6)

	.  reduce 6


state 14
	definition : enum .  (8)

	.  reduce 8


state 15
	definition : typedef .  (10)

	.  reduce 10


state 16
	struct_type : struct_start . '{' struct_decls '}' NAME_ ';'  (13)

	'{'  shift 24
	.  error


state 17
	select : select_start . '{' select_arms '}' NAME_ ';'  (23)

	'{'  shift 25
	.  error


state 18
	struct_start : PUBLIC_ STRUCT_ .  (12)

	.  reduce 12


state 19
	enum : ENUM_ '{' . enumerateds '}' NAME_ ';'  (19)

	NAME_  shift 26
	.  error

	enumerateds  goto 27
	enumerated  goto 28


state 20
	primitive : PRIMITIVE_ NAME_ . NUM_ ';'  (18)

	NUM_  shift 29
	.  error


state 21
	declaration : NAME_ . NAME_ ';'  (16)
	declaration : NAME_ . NAME_ '<' NUM_ '>' ';'  (17)

	NAME_  shift 30
	.  error


state 22
	typedef : TYPEDEF_ declaration .  (28)

	.  reduce 28


state 23
	typelist : definition typelist .  (3)

	.  reduce 3


state 24
	struct_type : struct_start '{' . struct_decls '}' NAME_ ';'  (13)
	struct_decls : .  (14)

	.  reduce 14

	struct_decls  goto 31


state 25
	select : select_start '{' . select_arms '}' NAME_ ';'  (23)
	select_arms : .  (25)

	.  reduce 25

	select_arms  goto 32


state 26
	enumerated : NAME_ . '(' NUM_ ')'  (22)

	'('  shift 33
	.  error


state 27
	enum : ENUM_ '{' enumerateds . '}' NAME_ ';'  (19)

	'}'  shift 34
	.  error


state 28
	enumerateds : enumerated .  (20)
	enumerateds : enumerated . ',' enumerateds  (21)

	','  shift 35
	'}'  reduce 20


state 29
	primitive : PRIMITIVE_ NAME_ NUM_ . ';'  (18)

	';'  shift 36
	.  error


state 30
	declaration : NAME_ NAME_ . ';'  (16)
	declaration : NAME_ NAME_ . '<' NUM_ '>' ';'  (17)

	';'  shift 37
	'<'  shift 38
	.  error


state 31
	struct_type : struct_start '{' struct_decls . '}' NAME_ ';'  (13)
	struct_decls : struct_decls . declaration  (15)

	NAME_  shift 21
	'}'  shift 39
	.  error

	declaration  goto 40


state 32
	select : select_start '{' select_arms . '}' NAME_ ';'  (23)
	select_arms : select_arms . select_arm  (26)

	CASE_  shift 41
	'}'  shift 42
	.  error

	select_arm  goto 43


state 33
	enumerated : NAME_ '(' . NUM_ ')'  (22)

	NUM_  shift 44
	.  error


state 34
	enum : ENUM_ '{' enumerateds '}' . NAME_ ';'  (19)

	NAME_  shift 45
	.  error


state 35
	enumerateds : enumerated ',' . enumerateds  (21)

	NAME_  shift 26
	.  error

	enumerateds  goto 46
	enumerated  goto 28


state 36
	primitive : PRIMITIVE_ NAME_ NUM_ ';' .  (18)

	.  reduce 18


state 37
	declaration : NAME_ NAME_ ';' .  (16)

	.  reduce 16


state 38
	declaration : NAME_ NAME_ '<' . NUM_ '>' ';'  (17)

	NUM_  shift 47
	.  error


state 39
	struct_type : struct_start '{' struct_decls '}' . NAME_ ';'  (13)

	NAME_  shift 48
	.  error


state 40
	struct_decls : struct_decls declaration .  (15)

	.  reduce 15


state 41
	select_arm : CASE_ . NAME_ ':' declaration  (27)

	NAME_  shift 49
	.  error


state 42
	select : select_start '{' select_arms '}' . NAME_ ';'  (23)

	NAME_  shift 50
	.  error


state 43
	select_arms : select_arms select_arm .  (26)

	.  reduce 26


state 44
	enumerated : NAME_ '(' NUM_ . ')'  (22)

	')'  shift 51
	.  error


state 45
	enum : ENUM_ '{' enumerateds '}' NAME_ . ';'  (19)

	';'  shift 52
	.  error


state 46
	enumerateds : enumerated ',' enumerateds .  (21)

	.  reduce 21


state 47
	declaration : NAME_ NAME_ '<' NUM_ . '>' ';'  (17)

	'>'  shift 53
	.  error


state 48
	struct_type : struct_start '{' struct_decls '}' NAME_ . ';'  (13)

	';'  shift 54
	.  error


state 49
	select_arm : CASE_ NAME_ . ':' declaration  (27)

	':'  shift 55
	.  error


state 50
	select : select_start '{' select_arms '}' NAME_ . ';'  (23)

	';'  shift 56
	.  error


state 51
	enumerated : NAME_ '(' NUM_ ')' .  (22)

	.  reduce 22


state 52
	enum : ENUM_ '{' enumerateds '}' NAME_ ';' .  (19)

	.  reduce 19


state 53
	declaration : NAME_ NAME_ '<' NUM_ '>' . ';'  (17)

	';'  shift 57
	.  error


state 54
	struct_type : struct_start '{' struct_decls '}' NAME_ ';' .  (13)

	.  reduce 13


state 55
	select_arm : CASE_ NAME_ ':' . declaration  (27)

	NAME_  shift 21
	.  error

	declaration  goto 58


state 56
	select : select_start '{' select_arms '}' NAME_ ';' .  (23)

	.  reduce 23


state 57
	declaration : NAME_ NAME_ '<' NUM_ '>' ';' .  (17)

	.  reduce 17


state 58
	select_arm : CASE_ NAME_ ':' declaration .  (27)

	.  reduce 27


State 0 contains 7 shift/reduce conflicts.
State 10 contains 7 shift/reduce conflicts, 1 reduce/reduce conflict.


32 terminals, 17 nonterminals
29 grammar rules, 59 states
